# openfront-tactical-suitcase

./: .gitignore  README.md  SPAWN_PHASE_IMPLEMENTATION.md  TESTING_GAME_END_SCREEN.md  copilot-project-context.md  ots.code-workspace  platformio.code-workspace  protocol-context.md  release.sh  weekly_announces.md
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml
components/: README.md
components/can_driver/: CMakeLists.txt  COMPONENT_PROMPT.md  README.md
doc/: README.md  STRUCTURE.md
doc/developer/: README.md  canbus-protocol.md  development-environment.md  getting-started.md  releases.md  repository-overview.md  websocket-protocol.md
doc/user/: README.md  quick-start.md  userscript-install.md  wifi-setup.md
ots-fw-audiomodule/: AUDIO_TEST_MENU.md  AUDIO_WORKING_CONFIG.md  CMakeLists.txt  CONSOLE_COMMANDS.md  CONSOLE_REFACTOR_SUMMARY.md  ESP32_A1S_AUDIOKIT_BOARD.md  PROJECT_PROMPT.md  QUICKSTART_EMBEDDING.md  README.md  partitions_no_ota.csv  partitions_test_menu.csv  platformio.ini  sdkconfig.defaults
ots-fw-audiomodule/docs/: BOOT_CAPTURE_TOOL.md  EMBEDDED_GAME_SOUNDS.md  ESP32_A1S_AUDIOKIT_BOARD.md  MULTI_FORMAT_AUDIO.md  PSRAM_OPTIMIZATION.md  SDCARD_AUDIO_SETUP.md  SOUND_ID_MAPPING.md
ots-fw-audiomodule/include/: audio_test_tone.h
ots-fw-audiomodule/prompts/: BOOT_CAPTURE_PROMPT.md
ots-fw-audiomodule/src/: CMakeLists.txt  ac101_driver.c  ac101_driver.h  audio_console.c  audio_console.c.backup  audio_console.h  audio_console_ui.c  audio_console_ui.h  audio_decoder.c  audio_decoder.h  audio_mixer.c  audio_mixer.h  audio_player.c  audio_player.h  audio_test_tone.c  audio_tone_player.c  audio_tone_player.h  audio_volume.c  audio_volume.h  board_config.h  can_audio_handler.c  can_audio_handler.h  can_handler.c  can_handler.h  can_protocol.c  can_protocol.h  main.c  serial_commands.c  serial_commands.h  sound_config.c  sound_config.h  wav_utils.c  wav_utils.h
ots-fw-audiomodule/tools/: README.md  capture_boot.py  diagnose_audio.py  embed_sounds.sh
ots-fw-can-hw-test/: CMakeLists.txt  PROJECT_PROMPT.md  README.md  platformio.ini  test_can_dual_monitor.sh
ots-fw-can-hw-test/src/: main.c
ots-fw-cantest/: CMakeLists.txt  PROJECT_PROMPT.md  README.md  interactive_test.py  platformio.ini
ots-fw-cantest/prompts/: FRESH_START_CHECKLIST.md  HARDWARE_DEBUG_CHECKLIST.md  MODULE_DEBUG_GUIDE.md  README.md  TEST_AUTOMATION_PLAN.md  TEST_STATUS_TRACKER.md  diagnose_hardware.md
ots-fw-cantest/src/: CMakeLists.txt  can_decoder.c  can_monitor.c  can_simulator.c  cli_handler.c  main.c
ots-fw-cantest/src/include/: can_test.h
ots-fw-cantest/tools/: .gitignore  can_decode.py  can_monitor.py  can_send.py  dual_monitor.py  flash_firmware.py  quick_monitor_test.py  recover_bus.py  requirements.txt  send_cantest_command.py  serial_expect.py  simple_discovery_test.py  test_16bit_sounds.py  test_all_sounds.py  test_discovery_fixed.py  test_embedded_sounds.py  test_embedded_tones.py  test_hardware.sh  test_loopback.py  test_loopback_single.py  test_play_all_sounds.py  test_production_audio.py  test_production_main.py  test_sounds_dual_monitor.py  test_two_device.py  wait_for_boot.py
ots-fw-main/: .gitignore  CHANGELOG.md  CMakeLists.txt  ERROR_RECOVERY.md  GAME_END_SCREEN.md  HARDWARE_TEST_INTEGRATION.md  IMPROVEMENTS.md  IMPROV_SERIAL.md  LCD_DISPLAY_MODES.md  OTA_GUIDE.md  README.md  REFACTORING_ADC_TASK.md  RGB_LED_STATUS.md  TESTING.md  TODO.md  WSS_TEST_GUIDE.md  copilot-project-context.md  partitions.csv  partitions.test.csv  platformio.ini  post_build_test.py  pre_build_test.py  sdkconfig.esp32-s3-dev  sdkconfig.test-adc  sdkconfig.test-i2c  sdkconfig.test-inputs  sdkconfig.test-lcd  sdkconfig.test-outputs  sdkconfig.test-websocket  test_wss_client.py
ots-fw-main/docs/: CAN_COMPONENT_IMPLEMENTATION.md  CAN_DRIVER_FUTURE.md  CAN_MULTI_MODULE_ROADMAP.md  CERTIFICATE_INSTALLATION_CHROME.md  CHANGELOG.md  COMPONENTS_ARCHITECTURE.md  ERROR_RECOVERY.md  GAME_END_SCREEN.md  HARDWARE_DIAGNOSTIC_IMPLEMENTATION.md  HARDWARE_TEST_INTEGRATION.md  HARDWARE_TEST_PLAN.md  (+16 more)
ots-fw-main/src/: CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_test_websocket.txt  adc_driver.c  adc_handler.c  alert_module.c  button_handler.c  can_protocol.c  device_settings.c  dns_captive_portal.c  event_dispatcher.c  game_state.c  game_state_manager.c  http_server.c  i2c_bus.c  i2c_handler.c  idf_component.yml  improv_serial.c  io_expander.c  io_expander.cpp  io_task.c  lcd_driver.c  led_controller.c  led_handler.c  main.c  main.cpp  main_power_module.c  module_io.c  module_io.cpp  module_manager.c  network_manager.c  nuke_module.c  nuke_state_manager.c  nuke_tracker.c  nvs_storage.c  ota_manager.c  ots_logging.c  protocol.c  protocol.cpp  rgb_handler.c  (+16 more)
ots-fw-main/src/tests/: test_adc.c  test_i2c_scan.c  test_input_board.c  test_lcd.c  test_output_board.c  test_websocket.c
ots-fw-shared/: MIGRATION.md  README.md
ots-hardware/: DISPLAY_SCREENS_SPEC.md  README.md  copilot-project-context.md  hardware-spec.md  module-template.md
ots-server/: CHANGELOG.md  LCD_DISPLAY_IMPLEMENTATION.md  README.md  copilot-project-context.md  nuxt.config.ts  package-lock.json  package.json
ots-shared/: README.md  package.json  tsconfig.json
ots-simulator/: LCD_DISPLAY_IMPLEMENTATION.md  README.md  app.config.ts  copilot-project-context.md  nuxt.config.ts  package.json  userscript.ots.js
ots-test-audio/: CMakeLists.txt  CODEC_ANALYSIS.md  ESP32_A1S_AUDIOKIT_BOARD.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-a1s
ots-userscript/: ATTACK_RATIO_RESEARCH.md  CHANGELOG.md  SIDEBAR_HUD_DESIGN.md  SPAWN_DETECTION_EXAMPLE.md  build.mjs  copilot-project-context.md  package-lock.json  package.json  tsconfig.json
ots-website/: .gitignore  README.md  downloads.md  index.md  package-lock.json  package.json  releases.md
prompts/: CANBUS_MESSAGE_SPEC.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_GUIDELINES.md  GIT_WORKFLOW.md  PLATFORMIO_WORKFLOW.md  PROMPT_REVIEW_GUIDE.md  PROMPT_REVIEW_PLAN.md  README.md  RELEASE.md  WEBSOCKET_MESSAGE_SPEC.md  protocol-context.md
(+301 files in other folders)
