idf_component_register(
    SRCS 
        "main.c"
        "io_expander.c"
        "module_io.c"
        "protocol.c"
        "ws_client.c"
        "ws_protocol.c"
        "led_controller.c"
        "button_handler.c"
        "adc_handler.c"
        "io_task.c"
        "game_state.c"
        "network_manager.c"
        "ota_manager.c"
        "event_dispatcher.c"
        "module_manager.c"
        "nuke_tracker.c"
        "nuke_module.c"
        "alert_module.c"
        "main_power_module.c"
        "system_status_module.c"
        "troops_module.c"
        "lcd_driver.c"
        "adc_driver.c"
    INCLUDE_DIRS 
        "../include"
    REQUIRES 
        espressif__esp_websocket_client
        espressif__mdns
        esp_wifi
        nvs_flash
        esp_timer
        json
        driver
        esp_http_server
        app_update
)
